# BMSTU-ASM

./: README.md
LAB_1/: EXAMPLE.ASM  HELLO.ASM
lab_10/: Makefile  bisection.c  bisection.h  main.asm
lab_12/: CMakeLists.txt  main.cpp
lab_2/: MAIN.ASM
lab_3/: FIRST.ASM  LIFE.ASM  SECOND.ASM  example.asm  example1.asm
lab_3/lab3_1/: LR03_1_2.ASM
lab_4/: lab.asm
lab_5/: input.asm  main.asm  to_octal.asm
lab_6/: example.asm  lab.asm
lab_7/: CMakeLists.txt
lab_7/inc/: extern_asm.h  inline_asm.h
lab_7/src/: extern_asm.cpp  inline_asm.cpp  inline_asm_32.cpp  main.cpp  strncpy.asm  strncpy_32.asm
lab_8/: CMakeLists.txt  main.cpp  measure_floats.cpp  pi.cpp
lab_9/: CMakeLists.txt  kek_ui.h  main.cpp  main_window.cpp  main_window.h  untitled.ui
